--- a/index.html
+++ b/index.html
@@ -3,10 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Document</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <title>Bootstrap | Setup</title>
+    <style>
+        h1{
+            margin-top: 100px;
+        }
+    </style>
 </head>
 <body>
+    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Tassnid's</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
     <h1>Welcome To Bootstrap!</h1>
+    <button class="btn btn-danger">Hello Bootstrap!</button>
+    <button class="btn btn-success">Mahmud</button>
+    <button class="btn btn-light">WOW</button>
+    <h1>Colors</h1>
+    <p class="text-primary">Bootstrap adding color!</p>
+    <div class="bg-primary text-white">
+        <h1>Latest Work!</h1>
+        <p>Learning bootstrap and having fun with it! YAY!</p>
+    </div>
+    <div class="bg-warning text-white">
+        <h1>Very good news!</h1>
+        <p>Learning bootstrap and having fun with it! YAY!</p>
+    </div>
+
+    <h1>Tassnid's | Images</h1>
+    <img class="img-fluid w-25 rounded-circle img-thumbnail" src="images/1.jpg" alt="">
+    <img class="img-fluid w-25 rounded-circle" src="images/2.1.jpg" alt="">
+    <img class="img-fluid w-25" src="images/2.jpg" alt="">
+    <div class="card" style="width: 18rem;">
+        <img src="images/3.0.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Tassnid's</h5>
+          <p class="card-text">Catalog Gullbano by Gulljee.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="images/3.0.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Tassnid's</h5>
+          <p class="card-text">Catalog Gullbano by Gulljee.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+      </div>
+      <h1>Navigation</h1>
+      <nav class="nav">
+          <a class="nav-link " href="#">Home</a>
+          <a class="nav-link" href="">Products</a>
+          <a class="nav-link" href="">Shopping Cart</a>
+          <a class="nav-link" href="">About us</a>
+      </nav>
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
 </body>
 </html>
